--- a/admin-strong-password.yaml
+++ b/admin-strong-password.yaml
@@ -1,48 +1,43 @@
-apiVersion: operator.openshift.io/v1
+apiVersion: operator.open-cluster-management.io/v1
 kind: ClusterPolicy
 metadata:
-  name: create-cluster-admin-user
+  name: create-cluster-admin-user-policy
   namespace: openshift-config-managed
 spec:
-  policyLibraryRef:
-    name: rhacm-policies
   remediationAction: enforce
-  applyTo:
-    clusters:
-      - name: '*'
-  configurationPolicy:
-    apiVersion: policy.open-cluster-management.io/v1
-    kind: ConfigurationPolicy
-    metadata:
-      name: create-admin-user-policy
-    spec:
-      remediationAction: enforce
-      namespaceSelector:
-        include:
-          - '*'
-      policy-templates:
-        - objectDefinition:
-            apiVersion: rbac.authorization.k8s.io/v1
-            kind: RoleBinding
-            metadata:
-              name: cluster-admin-binding
-              namespace: default
-            subjects:
-              - kind: User
-                name: new-cluster-admin
-                apiGroup: rbac.authorization.k8s.io
-            roleRef:
-              kind: ClusterRole
-              name: cluster-admin
-              apiGroup: rbac.authorization.k8s.io
-      validationFailureAction: enforce
-      violations:
-        - objectDefinition:
-            apiVersion: v1
-            kind: Secret
-            metadata:
-              name: new-cluster-admin-secret
-              namespace: default
-            type: Opaque
-            data:
-              password: YWt1b2d1a28xMjMhQCM=
+  policy-templates:
+    - complianceType: musthave
+      objectDefinition:
+        apiVersion: rbac.authorization.k8s.io/v1
+        kind: ClusterRoleBinding
+        metadata:
+          name: new-cluster-admin-binding
+        subjects:
+          - kind: User
+            name: new-cluster-admin
+            apiGroup: rbac.authorization.k8s.io
+        roleRef:
+          kind: ClusterRole
+          name: cluster-admin
+          apiGroup: rbac.authorization.k8s.io
+---
+apiVersion: operator.open-cluster-management.io/v1
+kind: Placement
+metadata:
+  name: create-cluster-admin-placement
+  namespace: openshift-config-managed
+spec:
+  clusterSelector: {}
+---
+apiVersion: operator.open-cluster-management.io/v1
+kind: PlacementBinding
+metadata:
+  name: create-cluster-admin-binding
+  namespace: openshift-config-managed
+spec:
+  placementRef:
+    name: create-cluster-admin-placement
+  subjects:
+    - kind: User
+      name: "new-cluster-admin"
+      apiGroup: rbac.authorization.k8s.io
